<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="oas.iot.unipr.it.iotsecureclient.ClientActivity">

    <android.support.v7.widget.Toolbar android:id="@+id/auth_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:title="@string/main_title"
        />

    <LinearLayout android:padding="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/auth_toolbar">

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView android:id="@+id/auth_device_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_iot_device"/>

        <LinearLayout android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView android:id="@+id/auth_device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name: Decio"/>

            <TextView android:id="@+id/auth_device_uuid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Uuid: b0aa5dd7-2619-4a48-90f3-bd03680a5899"/>

            <TextView android:id="@+id/auth_device_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Producer: Samsung"/>

            <TextView android:id="@+id/auth_device_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Model: A5"/>

            <TextView android:id="@+id/auth_device_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Type: switch"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView android:id="@+id/auth_get_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_get_grey"/>

        <TextView android:id="@+id/auth_get_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/get_request"
            android:textSize="18sp"
            android:textColor="@color/primary_text"
            android:layout_marginLeft="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView android:id="@+id/auth_post_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_post_grey"/>

        <TextView android:id="@+id/auth_post_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/post_request"
            android:textSize="18sp"
            android:textColor="@color/primary_text"
            android:layout_marginLeft="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView android:id="@+id/auth_put_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_put_grey"/>

        <TextView android:id="@+id/auth_put_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/put_request"
            android:textSize="18sp"
            android:textColor="@color/primary_text"
            android:layout_marginLeft="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView android:id="@+id/auth_delete_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_delete_grey"/>

        <TextView android:id="@+id/auth_delete_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/delete_request"
            android:textSize="18sp"
            android:textColor="@color/primary_text"
            android:layout_marginLeft="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView android:id="@+id/auth_auth_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_auth_grey"/>

        <TextView android:id="@+id/auth_auth_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/auth_request"
            android:textSize="18sp"
            android:textColor="@color/primary_text"
            android:layout_marginLeft="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView android:id="@+id/auth_own_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_own_grey"/>

        <TextView android:id="@+id/auth_own_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unowned_resource"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/primary_text"
            android:layout_marginLeft="16dp"/>

        </LinearLayout>

    </LinearLayout>

    <Button android:id="@+id/auth_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Authorize"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>